Changing MQTT files, error persists

--- a/IoT_Simulator/test.properties
+++ b/IoT_Simulator/test.properties
@@ -3,10 +3,11 @@
 brokerIP = 127.0.0.1
 protocolName=mqtt
 messageContent = Hello there !
+noOfMessages = 10
 
 #AMQP variables
 topicName=test
-//
+
 
 #MQTT variables
 queueName = test
